# dev

./: .coverage  .coveragerc  .importlinter  .pre-commit-config.yaml  .ridA.tmp  .ruff.toml  .specinfo.tmp  ACTIVE_SCAN_ISSUES_ANALYSIS.md  AI_VALIDATION_SUMMARY.md  AUTO_SNAPSHOT_SUMMARY.md  CI_IMPLEMENTATION.md  CODEOWNERS  DEBUG_RUN.md  DQI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PHASE4A_PLAN.md  README.md  RUNBOOK_METRICS.md  RUNBOOK_MIGRATION.md  SECFLOW_M0_COORDINATION_SUMMARY.md  SYNTAX_VALIDATION_SUMMARY.md  api_endpoints.py  app.py  app_config.json  board-smoke-test.md  cache.py  ci-python3.14.Dockerfile  config.py  core.py  cov_html.tgz  coverage.xml  docs_snapshot_2025-10-07.tgz  findings.py  findings.schema.json  init_asvs.py  metrics.py  mkdocs.yml  mkdocs.yml.backup  (+21 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  role-map.json
analytics_core/: __init__.py  analytics.py  metrics_telemetry.py
api/: __init__.py  analysis.py  findings.py  patterns.py  projects.py  reports.py  stats.py
app/: __init__.py  logging_conf.py  settings.py  specialized_loggers.py
archive/: DEBUG_RUN.md  DEVLOG_PHASE1.md  DRAWER_COLLAPSE_FIXES.md  DRAWER_SIZING_FIXES.md  IMPLEMENTATION_SUMMARY.md  PHASE3_BROWSER_VALIDATION.md  PHASE3_CLEANUP_RESULTS.md  PHASE3_DRAWER_CLEANUPS_PROOF.md  PHASE3_POLISH_RESULTS.md  PHASE3_README.md  PHASE3_SUMMARY.md  PHASE3_VALIDATION_SUCCESS.md  QUEUE_DETAILS_SIZING_FIX.md  RESPONSIVE_DESIGN_FIXES.md  TINY_CLEANUPS_PROOF.md  TINY_POLISH_PROOF.md  explorer.html
detectors/: enhanced_pattern_engine.py  modsecurity_integration.py  nuclei_integration.py  pattern_engine.py  pattern_manager.py
docs/: developer-onboarding.md  developer-start-here.md  index.md  security.md  shared-state.md
exports/: findings_report_test_project_20251006_093406.csv  findings_report_test_project_20251006_093410.json
forChatGPT/: ARCHITECTURE_MAP.md  ASYNC_TASKS_DESIGN.md  AUTH_ROLES_MATRIX.md  ERROR_CONTRACT.md  FILE_INDEX.md  OBSERVABILITY.md  P4_REGRESSION_GUARDRAILS.md  RUNBOOK.md  SEQUENCE_DIAGRAMS.md  SSE_CONTRACT.md  STORAGE_MIGRATION_PLAN.md  UX_STATES.md
overrides/: main.html
plugins/: approved_plugins.json  plugin_policy.yaml
reports/: DATA_PERSISTENCE_BEST_PRACTICES.md  ENDPOINT_VALIDATION_COMPLETE.md  PROJECT_CLEANUP_REPORT.md  RUNS_SIDE_PANEL_SCHEMA.md  RUN_ATTRIBUTION_AND_RETIREMENT_IMPLEMENTATION.md  RUN_ATTRIBUTION_VALIDATION_REPORT.md  SIDE_PANEL_SCROLLING_FIX.md  SITEMAP_RUNS_DRAWER_FIX.md  VULNERABILITY_LABEL_FIX.md  log.txt
routes/: __init__.py  dashboard.py  explorer.py  findings.py  history.py  metrics.py  nuclei.py  patterns.py  queue.py  reports.py  sitemap.py  tools.py  triage.py  vulns.py
schemas/: __init__.py  finding.json  finding.py  run.py
scripts/: ascii_html_blocker_gate.py  ascii_to_mermaid_stub.py  backfill_run_info.py  backfill_triage_defaults.py  benchmark_parsers.py  block_ascii_html.py  check_observability_budgets.py  check_perf_budgets.py  check_unbalanced.py  ci_gate.py  close_unclosed_fences.py  coordinator_required_checks.py  coverage_dashboard.py  coverage_ratchet.py  demo_inmemory_store.py  demo_runtime_executor.py  demo_sequential_executor.py  demo_workflow_execution.py  eod_reminder.txt  eod_report.sh  export_findings_report.py  fence_check.py  fence_hygiene.py  fence_repair.py  fence_repair_conservative.py  fix_mermaid.py  healthcheck.sh  label_plain_fences.py  label_plain_fences_corrected.py  m1_demo_tools.py  m1_dev_tools.py  mermaid_auto_repair.py  mermaid_diff_report.py  mermaid_parity.py  mermaid_parity_gate.py  migrate_cve_placeholders.py  migrate_legacy_findings.py  observability_budget_framework.py  observability_demo.py  pre-commit-guards.sh  (+9 more)
secflow/: SHARED-STATE-CONTRACT-v1.0.md  SHARED-STATE-CONTRACT-v1.1.md  __init__.py
security/: audit_logging.py  create_sample_plugins.py  generate_keys.py  plugin_loader.py  policy_enforcement.py  python314_evaluation.py  sandbox.py  signing.py
site/: 404.html  index.html
static/: filters.js  main.css  main.js  notifications.js  tokens.css
storage/: __init__.py  findings.py  profiles.py  projects.py  runs.py  state.py
tasks/: __init__.py  nuclei.py
templates/: _layout.html  _macros.html  active_testing.html  browser.html  dashboard.html  drawer_endpoint_preview.html  drawer_endpoint_runs.html  endpoint_preview.html  endpoint_runs.html  finding_detail.html  findings_clean.html  metrics.html  op_details.html  op_edit.html  op_preview.html  patterns.html  queue.html  queue_item_details.html  reports.html  run_detail_endpoint.html  runs.html  sitemap.html  sitemap_fragment.html  specs_fragment.html  template_manager_page.html  vulns.html
tests/: test_append_and_cache.py  test_bulk_triage.py  test_export.py  test_findings_normalize.py  test_metrics.py  test_observability.py  test_plugin_loader.py  test_plugin_security.py  test_security.py  test_sse_stream.py  test_triage_migration.py  test_triage_routes.py  test_ui_metrics.py  test_vulns_summary_triage.py
tools/: __init__.py  add_blocked_status.py  compile_daily_report.py  fix_project_status.py  indicators_drawers_proof.py  journal.py  journal_backfill.py  journal_metrics.py  nuclei.py  petstore_final_proof.py  petstore_proof.py  petstore_proof2.py  phase1_verify.py  plugin_sandbox.py  plugin_security_audit.py  (+21 more)
(+357 files in other folders)
